# ble-reticulum

./: .gitignore  BLE_PROTOCOL_v2.2.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DBUS_MONITORING_FIX.md  FUNDING.yml  LICENSE  PERIPHERAL_DISCONNECT_FIX_SUMMARY.md  README.md  REFACTORING_GUIDE.md  TESTING.md  install.sh  linux_bluetooth_driver.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_monitoring.py
.github/workflows/: README.md  deploy.sh  deploy.yml  release.yml  test.yml
examples/: ble_minimal_test.py  bluetooth-power-on.service  config_example.toml  two_device_simulator.py
src/RNS/Interfaces/: BLEAgent.py  BLEFragmentation.py  BLEGATTServer.py  BLEInterface.py  bluetooth_driver.py  linux_bluetooth_driver.py
tests/: conftest.py  mock_ble_driver.py  test_ble_peer_interface.py  test_bleak_threading_hang.py  test_bleak_with_exec_loading.py  test_bluez_state_cleanup.py  test_breddr_fallback_prevention.py  test_config_directory.py  test_dbus_disconnect_monitoring.py  test_error_recovery.py  test_fragmentation.py  test_gatt_server.py  test_gatt_server_readiness.py  test_identity_mapping_cleanup.py  test_installer.sh  test_integration.py  test_multi_device_simulation.py  test_peripheral_disconnect_cleanup.py  test_prioritization.py  test_refactor_suite.py  test_scanner_connection_coordination.py  test_stale_connection_polling.py  test_v2_2_identity_handshake.py  test_v2_2_mac_sorting.py  test_v2_2_race_conditions.py
